# routes/contact.js
@@ -6,4 +6,6 @@ routes.get('/:contact_id', contacts.findOne);
 
 routes.post('/', contacts.create);
 
+routes.put('/:contact_id', contacts.update);
+
 module.exports = routes;
